--- a/android/build.gradle
+++ b/android/build.gradle
@@ -12,12 +12,16 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath("com.android.tools.build:gradle")
+        classpath("com.android.tools.build:gradle:7.2.0") // Đảm bảo chỉ định phiên bản
         classpath("com.facebook.react:react-native-gradle-plugin")
-        classpath("org.jetbrains.kotlin:kotlin-gradle-plugin")
-        classpath 'com.google.gms:google-services:4.3.14'
+        classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion")
+        classpath 'com.google.gms:google-services:4.3.10'
     }
 }
 
-apply plugin: "com.facebook.react.rootproject"
-apply plugin: 'com.google.gms.google-services'
+allprojects {
+    repositories {
+        google()
+        mavenCentral()
+    }
+}
