--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "@react-native-google-signin/google-signin": "^13.1.0",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
+    "@types/react-native": "^0.72.8",
+    "@types/react-navigation": "^3.0.8",
+    "expo-auth-session": "~5.5.2",
     "expo-google-sign-in": "^10.2.0",
     "react": "18.3.1",
     "react-native": "^0.75.3",
@@ -30,7 +33,7 @@
     "@react-native/eslint-config": "0.75.3",
     "@react-native/metro-config": "0.75.3",
     "@react-native/typescript-config": "0.75.3",
-    "@types/react": "^18.2.6",
+    "@types/react": "^18.3.10",
     "@types/react-native-google-signin": "^1.0.7",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
@@ -38,7 +41,7 @@
     "jest": "^29.6.3",
     "prettier": "2.8.8",
     "react-test-renderer": "18.3.1",
-    "typescript": "5.0.4"
+    "typescript": "^5.0.4"
   },
   "engines": {
     "node": ">=18"
